# BattleShip-clearbutton

./: BUILDING.md  CLAUDE.md  CMakeLists.txt  README.md  config.yml
.github/workflows/: build.yml  release.yml
android/: .gitignore  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/jrickey/battleship/: AnalogStickView.java  AssetExtractor.java  BattleShipActivity.java  BootActivity.java  MainActivity.java  TouchOverlay.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/res/drawable/: btn_n64_menu.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
cmake/: ModO2R.cmake  funchook_capstone_bump.cmake  macho_text_rwx.py  macos_entitlements.plist
docs/: android_port_spike_2026-05-01.md  architecture.md  build_and_tooling.md  classic_coop.md  jp_rom_compat_plan_2026-05-17.md  jp_runtime_triage_2026-05-18.md  modding.md
docs/bugs/: README.md  crash_handler_devnull_probe_2026-06-10.md  funchook_macos_arm64_patch_anchor_2026-06-15.md  grab_pose_eulerextract_gimbal_2026-05-23.md  grab_pose_stale_root_transform_2026-05-23.md  jp_attract_music_settings_update_race_2026-05-18.md  jp_gmcolscripts_pikachu_specialhi_unguarded_2026-05-18.md  jp_submotion_figatree_misclassified_2026-05-18.md  jp_torch_relocfactory_us_hardcoded_table_2026-05-18.md  jp_us_only_funcs_called_unconditionally_2026-05-18.md  macos_crash_2026-06-10.txt  stability_audit_sweep_2026-06-09.md  stale_o2r_recipe_mismatch_2026-06-09.md  zebes_acid_effect_stale_dl_link_holder_2026-05-23.md
include/: reloc_data.jp.h  reloc_data.us.h
port/: coroutine_android.cpp  coroutine_posix.cpp  coroutine_win32.cpp  first_run.cpp  gameloop.cpp  port.cpp  port_watchdog.cpp  ssb64.rc.in
port/bridge/: lbreloc_byteswap.cpp  lbreloc_byteswap.h
port/css_icons/: port_css_arrow.cpp  port_css_arrow.h  port_css_stage_assets.cpp  port_css_stage_assets.h
port/enhancements/: BootToVSCSS.cpp  ClassicCoop.cpp  CompRuleset.cpp  CpuLevel9.cpp  DisableStageHazards.cpp  NeutralSpawns.cpp  SkipResultsScreen.cpp  enhancements.h  volume.cpp
port/gui/: PortMenu.cpp  PortMenu.h
port/hires/: HiResHook.cpp  HiResHook.h  HiResPack.cpp  HiResPack.h
port/hooks/: Events.cpp  Events.h
port/hooks/list/: EngineEvent.h
port/mods/: HookManager.cpp  HookManager.h  SymbolResolver.cpp  SymbolResolver.h  mod_bridge.cpp
port/resource/: RelocFileTable.h  RelocFileTable.jp.cpp  RelocFileTable.jp.h  RelocFileTable.us.cpp  RelocFileTable.us.h
scripts/: android-emulator.sh  android-env.sh  new-worktree.sh  package-linux.sh  package-macos.sh  package-windows.ps1
tools/: aifc_to_wav.py  derive_stage_assets.py  edit_css_icon.html  edit_css_icon.py  generate_arrow_svg.py  generate_reloc_stubs.py  generate_reloc_table.py  generate_yamls.py  merge_mod.py  png_to_c_array.py  png_to_ia8_inc_c.py  png_to_rgba16_inc_c.py  relocFileDescriptions.jp.txt  reloc_data_symbols.jp.txt  upstream_reconcile.py  wav_to_pcm_inc_c.py
workspace/hooktest/: CMakeLists.txt  README.md  manifest.json
workspace/hooktest/src/: hooktest.c
workspace/playertint/: CMakeLists.txt  README.md  manifest.json
workspace/playertint/include/: mod.h
workspace/playertint/src/: playertint.c
workspace/template/: manifest.json
workspace/template/src/: demo.c
yamls/jp/: audio.yml  particles.yml  reloc_animations.yml  reloc_bonus.yml  reloc_effects.yml  reloc_extern_data.yml  reloc_fighters_common.yml  reloc_fighters_main.yml  reloc_interface.yml  reloc_items.yml  reloc_menus.yml  reloc_misc.yml  reloc_misc_named.yml  reloc_movies.yml  reloc_scene.yml  reloc_stages.yml  reloc_submotions.yml  reloc_transitions.yml
